--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -16,21 +16,23 @@
 
     {% if done %}
         <h2>Результат: {{ score }} / 50</h2>
+
         {% for r in results %}
             <div class="question {% if r.is_correct %}correct{% else %}incorrect{% endif %}">
                 <strong>{{ loop.index }}. {{ r.question }}</strong><br>
                 {% for opt in r.options %}
                     <label>
                         <input type="radio" disabled
-                            {% if r.user_answer == loop.index0|string %}
-                                checked
-                            {% endif %}> {{ opt }}
+                            {% if r.user_answer in opt %} checked {% endif %}>
+                        {{ opt }}
                     </label><br>
                 {% endfor %}
-                <p><em>Дұрыс жауап: {{ r.correct_answer }}</em></p>
+                <p><em>Дұрыс жауап: {{ r.correct_answer }})</em></p>
             </div>
         {% endfor %}
+
         <a href="/">Қайта тапсыру</a>
+
     {% else %}
         <form method="post">
             {% for i, row in questions %}
@@ -42,7 +44,6 @@
                             <b>{{ opt }})</b> {{ row[opt] }}
                         </label><br>
                     {% endfor %}
-                    <input type="hidden" name="qid_{{ i }}" value="{{ row.name }}">
                 </div>
             {% endfor %}
             <button type="submit">Жауаптарды тексеру</button>
